Fixes for branch misprediction + added benchmark with sorted keys
Signed-off-by: Ketan Verma <ketan9495@gmail.com>